--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">My Application</string>
 
     <string name="Hello_World">Hello, World!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Chal ab nikal!</string>
 </resources>
